GUI UI improvements/changes; photo is displayed and is clickable to open in browser